2002-02-07  Paolo Maggi  <maggi@athena.polito.it>

	* Makefile.am (SUBDIRS): added taglist 

	* taglist/gedit-taglist-plugin.c:
	* taglist/gedit-taglist-plugin.h:
	* taglist/gedit-taglist-plugin-parser.c:
	* taglist/gedit-taglist-plugin-parser.h:
	* taglist/gedit-taglist-plugin-window.c:
	* taglist/gedit-taglist-plugin-window.h:
	* taglist/Makefile.am:
	* taglist/taglist.xml: new files

2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* cvschangelog/cvschangelog.c (update_ui): fix mem leak

	* time/time.c (time_world_cb): fix mem leak

2002-02-06  Paolo Maggi  <maggi@athena.polito.it>

	* cvschangelog/Makefile.am:
	* docinfo/Makefile.am: 
	* sample/Makefile.am: 
	* shell_output/Makefile.am:
	* time/Makefile.am: define G*_DEPRECATED in INCLUDES

	* cvschangelog/cvschangelog.c:
	* docinfo/docinfo.c: 
	* sample/sample.c: 
	* shell_output/shell_output.c:
	* time/time.c: fix to compile with G*_DEPRECATED

2002-02-06  Duarte Loreto  <happyguy_pt@hotmail.com>

        * shell_output/shell_output.c: Fixed misspelled word (Exucute -> Execute).

2002-02-05  Paolo Maggi <maggi@athena.polito.it>
	
	* cvschangelog/cvschangelog.c: warning cleans

	* docinfo/docinfo.c: ditto

	* sample/sample.c: ditto

	* shell_output/shell_output.c: ditto

	* plugins/time/time.c: ditto

2002-02-01  James Willcox  <jwillcox@cs.indiana.edu>

	* sample/sample.c (update_ui):  Removed references to BonoboUIEngine
	and converted to use BonoboUIComponent.
	* docinfo/docinfo.c: ditto
	* cvschangelog/cvschangelog.c: ditto
	* time/time.c: ditto
	* shell_output/shell_output.c: ditto

2002-01-26  James Willcox  <jwillcox@cs.indiana.edu>

	* sample/sample.c (activate, deactivate):  Converted to use
	gedit_menus_[add/remove]_menu_item_all()
	* cvschangelog/cvschangelog.c: ditto
	* docinfo/docinfo.c: ditto
	* time/time.c: ditto
	* shell_output/shell_output.c: ditto

2002-01-24  Paolo Maggi  <maggi@athena.polito.it>

	* shell_output/shell_output.c (update_ui): disable
	the menu entry in the current doc is RO