@@ -4,7 +4,7 @@
   <gedit:TagGroup name="HTML - Tags">
 
     <gedit:Tag name="Abbreviated form">
-      <gedit:Begin>&lt;ABBR&gt;</gedit:Begin>
+      <gedit:Begin>&lt;ABBR&gt;&#10;</gedit:Begin>
       <gedit:End>&lt;/ABBR&gt;</gedit:End>
     </gedit:Tag>
 
@@ -42,6 +42,350 @@
     <gedit:Tag name="alarm(...)">
       <gedit:Begin>alarm(</gedit:Begin>
       <gedit:End>) </gedit:End>
+    </gedit:Tag>
+
+  </gedit:TagGroup>
+
+
+  <gedit:TagGroup name="Latex - Tags">
+
+    <gedit:Tag name="Bibliography cite">
+      <gedit:Begin>\cite{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Bibliography item">
+      <gedit:Begin>\bibitem{ </gedit:Begin>
+      <gedit:End> }{} &#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Bibliography shortcite">
+      <gedit:Begin>\shortcite{ </gedit:Begin>
+      <gedit:End>  }</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Bibliography thebibliography">
+      <gedit:Begin>\begin{thebibliography}{99}&#10;</gedit:Begin>
+      <gedit:End>&#10;\end{thebibliography}</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Brackets ()">
+      <gedit:Begin>\left( </gedit:Begin>
+      <gedit:End> \right) </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Brackets []">
+      <gedit:Begin>\left[ </gedit:Begin>
+      <gedit:End> \right] </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Brackets {}">
+      <gedit:Begin>\left\{  </gedit:Begin>
+      <gedit:End> \right\} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Brackets &lt;&gt;">
+      <gedit:Begin>\left\langle  </gedit:Begin>
+      <gedit:End> \right\rangle </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="File inpu">
+      <gedit:Begin>\input{ </gedit:Begin>
+      <gedit:End> }&#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function cosin">
+      <gedit:Begin>\cos{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function e^ ">
+      <gedit:Begin>e^{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function exp">
+      <gedit:Begin>\exp{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function log">
+      <gedit:Begin>\log{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function log10">
+      <gedit:Begin>\log_{10}{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Function sine">
+      <gedit:Begin>\sin{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek alpha">
+      <gedit:Begin>\alpha  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek beta">
+      <gedit:Begin>\beta  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek epsilon">
+      <gedit:Begin>\varepsilon  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek gamma">
+      <gedit:Begin>\gamma  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek lambda">
+      <gedit:Begin>\lambda  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek rho">
+      <gedit:Begin>\rho  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Greek tau">
+      <gedit:Begin>\tau  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 0 (chapter)">
+      <gedit:Begin>\chapter{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 0 (chapter*)">
+      <gedit:Begin>\chapter*{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 1 (section)">
+      <gedit:Begin>\section{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 1 (section*)">
+      <gedit:Begin>\section*{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 2 (subsection)">
+      <gedit:Begin>\subsection{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 2 (subsection*)">
+      <gedit:Begin>\subsection*{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 3 (subsubsection)">
+      <gedit:Begin>\subsubsection{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 3 (subsubsection*)">
+      <gedit:Begin>\subsubsection*{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header 4 (paragraph)">
+      <gedit:Begin>\paragraph{ </gedit:Begin>
+      <gedit:End> }  </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Header appendix">
+      <gedit:Begin>\appendix&#10; </gedit:Begin>
+    </gedit:Tag>
+    
+    <gedit:Tag name="List description ">
+      <gedit:Begin>\begin{description}&#10;</gedit:Begin>
+      <gedit:End>&#10;\end{description}&#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="List enumerate ">
+      <gedit:Begin>\begin{enumerate}&#10;</gedit:Begin>
+      <gedit:End>&#10;\end{enumerate}&#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="List itemize ">
+      <gedit:Begin>\begin{itemize}&#10;</gedit:Begin>
+      <gedit:End>&#10;\end{itemize}&#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Item with label">
+      <gedit:Begin>\item[ </gedit:Begin>
+      <gedit:End> ]</gedit:End>
+    </gedit:Tag>
+    
+    <gedit:Tag name="Item">
+      <gedit:Begin>\item </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Maths (display)">
+      <gedit:Begin>&#10;$$&#10;</gedit:Begin>
+      <gedit:End>&#10;$$&#10;</gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Maths (inline)">
+      <gedit:Begin>$ </gedit:Begin>
+      <gedit:End> $ </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Operator fraction">
+      <gedit:Begin>\frac{ </gedit:Begin>
+      <gedit:End> }{} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Operator integral (display)">
+      <gedit:Begin>\int\limits_{ </gedit:Begin>
+      <gedit:End> }^{} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Operator integral (inline)">
+      <gedit:Begin>\int_{ </gedit:Begin>
+      <gedit:End> }^{} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Operator sum (display)">
+      <gedit:Begin>\sum\limits_{ </gedit:Begin>
+      <gedit:End> }^{} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Operator sum (inline)">
+      <gedit:Begin>\sum_{ </gedit:Begin>
+      <gedit:End> }^{} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Reference label">
+      <gedit:Begin>\label{ </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Reference ref">
+      <gedit:Begin>{\protect\ref{ </gedit:Begin>
+      <gedit:End> }} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol &lt;&lt;">
+      <gedit:Begin>\ll </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol &lt;=">
+      <gedit:Begin>\le </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol &gt;= ">
+      <gedit:Begin>\ge </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol &gt;&gt;">
+      <gedit:Begin>\gg </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol and">
+      <gedit:Begin>\mathrm{and} </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol const">
+      <gedit:Begin>\mathrm{const} </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol d2-by-dt2-partial">
+      <gedit:Begin>\frac{\partial{ </gedit:Begin>
+      <gedit:End> }^2}{\partial t^2} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol dagger">
+      <gedit:Begin>\dagger </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol d-by-dt">
+      <gedit:Begin>\frac{{\mathrm{d}} </gedit:Begin>
+      <gedit:End> }{{\mathrm{d}}t} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol d-by-dt-partial">
+      <gedit:Begin>\frac{\partial  </gedit:Begin>
+      <gedit:End> }{\partial t} </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol equiv">
+      <gedit:Begin>\equiv </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol hyphen --">
+      <gedit:Begin>--  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol hyphen ---">
+      <gedit:Begin>---  </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol infinity">
+      <gedit:Begin>\infty </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol mathspace ,">
+      <gedit:Begin>\quad\mathrm{,} </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol mathspace . ">
+      <gedit:Begin>\quad\mathrm{.} </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol mathspace _">
+      <gedit:Begin>\quad </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol mathspace __ ">
+      <gedit:Begin>\qquad </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol simeq">
+      <gedit:Begin>\simeq </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Symbol star">
+      <gedit:Begin>\star </gedit:Begin>
+    </gedit:Tag>
+
+    <gedit:Tag name="Typeface bold">
+      <gedit:Begin>\textbf{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Typeface type">
+      <gedit:Begin>\textt{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Typeface italic ">
+      <gedit:Begin>\textit{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Typeface slanted ">
+      <gedit:Begin>\textsl{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Emphasis">
+      <gedit:Begin>\emph{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+ 
+    <gedit:Tag name="Unbreakable text">
+      <gedit:Begin>\mbox{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
+    </gedit:Tag>
+
+    <gedit:Tag name="Footnote">
+      <gedit:Begin>\footnote{  </gedit:Begin>
+      <gedit:End> } </gedit:End>
     </gedit:Tag>
 
   </gedit:TagGroup>
