@@ -1,3 +1,7 @@
+2002-02-08  Paolo Maggi  <maggi@athena.polito.it>
+
+	* taglist/taglist.xml: added Latex tag group
+
 2002-02-07  Paolo Maggi  <maggi@athena.polito.it>
 
 	* Makefile.am (SUBDIRS): added taglist 
